<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <!-- TopBar -->
    <com.qmuiteam.qmui.widget.QMUITopBar
        android:id="@+id/mTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/TianyiBlue"
        app:qmui_topbar_title_color="@color/white"
        app:qmui_topbar_image_btn_width="40dp"
        app:qmui_topbar_image_btn_height="40dp"
        android:fitsSystemWindows="true"/>

    <!-- 主视觉区 -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/qmui_topbar_height"
        android:background="@color/qmui_config_color_white">

        <!-- 大盘 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- 选择请求地址 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/string_selectPort"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinner_portSelection"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:entries="@array/spinner_array"
                    android:theme="@style/spinner_style"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <!-- 填写请求参数 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_req_params"
                android:textSize="20sp"
                android:textAlignment="center" />

            <!-- TextView 填写请求参数 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_param_1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/tv_param1"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_param_1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:ignore="Autofill,LabelFor,TextFields,VisualLintTextFieldSize,SpeakableTextPresentCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_param_2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/tv_param2"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_param_2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:ignore="Autofill,LabelFor,TextFields,VisualLintTextFieldSize,SpeakableTextPresentCheck" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_sendRequest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_sendReq"
                android:textSize="20sp"
                android:background="@color/TianyiBlue"
                android:foreground="?attr/selectableItemBackground"
                tools:ignore="VisualLintButtonSize" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_ReqResult"
                android:textSize="20sp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_ReqResults"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:text="@string/tv_ReqResults"
                android:textSize="20sp"
                android:scrollbars="vertical"
                android:background="@drawable/latency_border" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>