<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <!-- TopBar -->
    <com.qmuiteam.qmui.widget.QMUITopBar
        android:id="@+id/mTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/TianyiBlue"
        app:qmui_topbar_title_color="@color/white"
        app:qmui_topbar_image_btn_width="40dp"
        app:qmui_topbar_image_btn_height="40dp"
        android:fitsSystemWindows="true"/>

    <!-- 主视觉区 -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/qmui_topbar_height"
        android:background="@color/qmui_config_color_white">

        <!-- 大盘 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- 门锁状态数据 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/string_lockState"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_lockState"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/tv_lockState"
                    android:textAlignment="viewEnd"
                    android:textSize="20sp" />

            </LinearLayout>

            <!-- 光照数据 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/string_lightData"
                    android:textSize="20sp"
                    android:textAlignment="center"/>

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/lightLineChart"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

            </LinearLayout>

            <!-- 温湿度数据 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/string_tempAndHumidData"
                    android:textSize="20sp"
                    android:textAlignment="center" />
                
                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/tempAndHumidLineChart"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/waitForFlush"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/APIDelayTimer_Connection"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/APIDelayTimer"
                    android:textSize="20sp"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</FrameLayout>