<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <!-- TopBar -->
    <com.qmuiteam.qmui.widget.QMUITopBar
        android:id="@+id/mTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/TianyiBlue"
        app:qmui_topbar_title_color="@color/white"
        app:qmui_topbar_image_btn_width="40dp"
        app:qmui_topbar_image_btn_height="40dp"
        android:fitsSystemWindows="true"/>

    <!-- 主视觉区 -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/qmui_topbar_height"
        android:background="@color/qmui_config_color_white">

        <!-- 设置大盘 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- API 刷新时间 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/string_APIRefreshTime"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_APIRefreshTime"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/string_APIRefreshTimeEditText"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:ignore="Autofill,TextFields,VisualLintTextFieldSize,DuplicateSpeakableTextCheck" />

            </LinearLayout>

            <!-- 图表刷新时间 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/string_ChartsRefreshTime"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_ChartsRefreshTime"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/string_ChartsRefreshTimeEditText"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_SettingsUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="更新"
                android:textSize="20sp"
                android:background="@color/TianyiBlue"
                android:foreground="?attr/selectableItemBackground" />

        </LinearLayout>



    </ScrollView>

</FrameLayout>